@@ -1,3 +1,12 @@
+2008-03-03  Michael McNamara  <mac@mail.brushroad.com>
+
+	* verilog-mode.el (verilog-font-grouping-keywords): Fix bug in the
+	grouping-keyword regular expression.
+	(verilog-font-lock-keywords): Allow users to toggle special
+	highlight of grouping-keywords.
+	(verilog-highlight-grouping-keywords): The toggle for special
+	highlighting of grouping keywords.
+
 2008-03-02  Juri Linkov  <juri@jurta.org>
 
 	* startup.el: Revert 2008-02-28 change that adds initial message
